WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129135
ASSERT on touches callbacks after
r164409
on iOS
https://bugs.webkit.org/show_bug.cgi?id=129135
Summary
ASSERT on touches callbacks after r164409 on iOS
Enrica Casucci
Reported
2014-02-20 17:55:35 PST
http://trac.webkit.org/changeset/164409
caused a number of ASSERT to fire on iOS. true was used in the call to m_performCallbackWithReturnValue (instead of false) and false in invalidate (instead of true). This change also reintroduced the use of isMainThread on WebKit2 which doesn't work on iOS and should replaced with RunLoop::isMain().
Attachments
Patch
(2.84 KB, patch)
2014-02-20 17:58 PST
,
Enrica Casucci
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-02-20 17:58:28 PST
Created
attachment 224814
[details]
Patch
Enrica Casucci
Comment 2
2014-02-20 18:08:55 PST
Committed revision 164462.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug